# qrcode-writer

./: README.md  main.py  pyproject.toml
